unpackaged/main/default/objects/OrderApi__Source_Code__c/OrderApi__Source_Code__c.object-meta.xml
<CustomObject>
    <description>Source Codes link Receipts to marketing activities.</description>
    <label>Source Code</label>
    <nameField>
        <label>Source Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Source Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>