unpackaged/main/default/objects/OrderApi__Source_Code__c/fields/OrderApi__Active__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only active Source Codes can be linked to new Cash Entries/Invoices.</description>
    <inlineHelpText>Only active Source Codes can be linked to new Cash Entries/Invoices.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>