unpackaged/main/default/objects/OrderApi__Source_Code__c/fields/OrderApi__Channel__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Channel__c</fullName>
    <description>**Required** Choose the most appropriate channel for the Source Code.</description>
    <inlineHelpText>**Required** Choose the most appropriate channel for the Source Code.</inlineHelpText>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Mail</fullName>
                <default>true</default>
                <label>Direct Mail</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Event Sponsorship</fullName>
            </value>
            <value>
                <fullName>Newspaper Ad</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Peer-to-Peer</fullName>
            </value>
            <value>
                <fullName>Press Release</fullName>
            </value>
            <value>
                <fullName>Search Engine Organic</fullName>
            </value>
            <value>
                <fullName>Search Engine PPC</fullName>
            </value>
            <value>
                <fullName>Web Advertisement</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>